--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-More Journal Entries is a mod, that aims to create a significant amount of journal entries, to make every nation have interesting choices.
+More Journal Entries is a mod for Victoria 3, that aims to create a significant amount of journal entries, to make every nation have interesting choices.
 At the moment the priority are journal chains for every aspect of the game, that are hard to complete and provide significant bonuses, such as permanent and/or powerful modifiers, changing the ideologies of interest groups or claims on neighboring territory.
 
 If you have any ideas please feel free to give me feedback or even contribute yourself.
