--- a/localization/intelligentsia_l_english.yml
+++ b/localization/intelligentsia_l_english.yml
@@ -10,5 +10,5 @@
   je_intelligentsia_init: "First Steps towards a bright Society."
   je_intelligentsia_1: "Effective Intelligentsia Rule!"
   je_intelligentsia_1_reason: "The Intelligentsia recently came to power, yet they still have to prove, that they can govern effectively."
-  je_intelligentsia_1_goal: "The Intelligentsia has been part of a government with 50 or more legitimacy for at least 12 months."
-  je_intelligentsia_2: "Second Entry!"  
+  je_intelligentsia_1_goal: "The Intelligentsia has been part of a government with 50 or more legitimacy for at least 12 consecutive months."
+  je_intelligentsia_2: "Second Entry!"
