Intelligentsia Chain no longer uses clunky init

--- a/localization/intelligentsia_l_english.yml
+++ b/localization/intelligentsia_l_english.yml
@@ -7,8 +7,7 @@
   intelligentsia.1.b: "Focus on our research."
 
   #journal
-  je_intelligentsia_init: "First Steps towards a bright Society."
-  je_intelligentsia_1: "Effective Intelligentsia Rule!"
+  je_intelligentsia_1: "Intelligentsia in Government!"
   je_intelligentsia_1_reason: "The Intelligentsia recently came to power, yet they still have to prove, that they can govern effectively."
   je_intelligentsia_1_goal: "The Intelligentsia has been part of a government with 50 or more legitimacy for at least 12 consecutive months."
   je_intelligentsia_2: "Second Entry!"
