new intelligentsia entry

--- a/README
+++ b/README
@@ -5,6 +5,7 @@ If you have any ideas please feel free to give me feedback or even contribute yo
 
 The following Chains are currently being worked on:
   -Intelligentsia
+  -Devout
 
 The following Chains are planned:
   Interest Groups:  
