added coalition (not yet usable)

--- a/README
+++ b/README
@@ -16,6 +16,7 @@ The following Chains are planned:
     -Industrialists
     -Trade Unions
     -Landowners
+    -A few special chains for coalitions between groups
   Industries:
     -Grain and Meat
     -Plantation
@@ -33,3 +34,5 @@ The following Chains are planned:
     -Acquiring subjects
     -Becoming regnognised
     -Becoming a great power
+
+
