--- a/localization/intelligentsia_l_english.yml
+++ b/localization/intelligentsia_l_english.yml
@@ -28,7 +28,7 @@
   intelligentsia.4.c: "What about the Women?!"
   intelligentsia.4.c.tt: "(Possible due to having researched Feminism.)"
   intelligentsia.4.de: "What about the Women?"
-  intelligentsia.4.c.tt: "(Additional Benefit if triggered after researching Feminism.)"
+  intelligentsia.4.d.tt: "(Additional Benefit if triggered after researching Feminism.)"
 
   intelligentsia.5.t: "The Education Act"
   intelligentsia.5.d: "With there being a university in every one of our states, we can now guarantee education to all of our people."
