--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
 Should Check Landowners Fate Entry for compitability with Stamp out Monarchism and revise how it replaces flavored ideologies
 (maybe have elitist already be modernized, and thus auto complete the je?)
+
+Should check party join weight for new ideologies
+(maybe rewrite whole system to be more dynamic?)
