agrarian party rewritten

--- a/TODO
+++ b/TODO
@@ -2,5 +2,4 @@ Should Check Landowners Fate Entry for compitability with Stamp out Monarchism a
 (maybe have elitist already be modernized, and thus auto complete the je?)
 
 Should check party join weight for new ideologies
-(maybe rewrite whole system to be more dynamic?)
-
+done: agrarian party
